src/z80asm/z80asm2/t/20-preproc/expected/binary_22.txt
% z88dk-z80asm -v -dump-after-directives t/20-preproc//input/binary_22.asm
Assembling t/20-preproc/input/binary_22.asm...
t/20-preproc/input/binary_22.asm:1:27: error: Unexpected token after BINARY: extra
    binary file-not-found.bin extra
                              ^
